add to ci check

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -366,6 +366,7 @@ jobs:
       - license
       - pr
       - platform-xtest
+      - associated-issue
     runs-on: ubuntu-latest
     if: always()
     steps:
