--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -56,6 +56,98 @@ jobs:
             authz
             examples
 
+  associated-issue:
+    name: Issue Accociated with Pull Request
+    if: |
+      contains(fromJSON('["pull_request", "pull_request_target"]'), github.event_name) &&
+      !contains(fromJSON('["dependabot[bot]", "opentdf-automation[bot]"]'), github.actor)
+    runs-on: ubuntu-22.04
+    permissions:
+      pull-requests: write
+    steps:
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
+        with:
+          script: |
+            core.debug(JSON.stringify(context));
+            const query = `query ($owner: String!, $name: String!, $number: Int!) {
+              repository(owner: $owner, name: $name) {
+                pullRequest(number: $number) {
+                  id
+                  closingIssuesReferences(first: 50) {
+                    edges {
+                      node {
+                        id
+                        body
+                        number
+                        title
+                      }
+                    }
+                  }
+                  comments(last: 100) {
+                    edges {
+                      node {
+                        id
+                        body
+                        author {
+                          login
+                        }
+                        isMinimized
+                      }
+                    }
+                  }
+                }
+              }
+            }`;
+            const variables = {
+              owner: context.repo.owner,
+              name: context.repo.repo,
+              number: context.issue.number
+            }
+            const result = await github.graphql(query, variables)
+            
+            core.debug(JSON.stringify(result));
+
+            if (result.repository.pullRequest.closingIssuesReferences.edges.length === 0) {
+              const comments = result.repository.pullRequest.comments.edges;
+              for (const comment of comments) {
+                // Minimize the previous comment if one exists
+                console.debug(comment);
+                console.debug(comment.node.body.match(/<!-- associated-issue-action -->/g) != null);
+                if (comment.node.author.login === 'github-actions' && !comment.node.isMinimized && comment.node.body.match(/<!-- associated-issue-action -->/g) != null) {
+                  const minimizeCommentMutation = `mutation minimizeComment($id: ID!) {
+                    minimizeComment(input: { subjectId: $id, classifier: OUTDATED }) {
+                      minimizedComment {
+                        isMinimized
+                      }
+                    }
+                  }`;
+                  const minimizeCommentVariables = {
+                    id: comment.node.id
+                  }
+                  await github.graphql(minimizeCommentMutation, minimizeCommentVariables)
+                }
+              }
+              const body = `
+              > [!WARNING] 
+              > This pull request does not reference any issues. Please add a reference to an issue in the body of the pull request description.
+              <!-- associated-issue-action -->`;
+              const createCommentMutation = `mutation createComment($id: ID!, $body: String!) {
+                addComment(input: { subjectId: $id, body: $body }) {
+                  commentEdge {
+                    node {
+                      id
+                    }
+                  }
+                }
+              }`;
+              
+              const createCommentVariables = {
+                id: result.repository.pullRequest.id,
+                body: body
+              }
+              await github.graphql(createCommentMutation, createCommentVariables)
+              core.setFailed('This pull request does not reference any issues. Please add a reference to an issue in the body of the pull request description.');
+            }
   go:
     runs-on: ubuntu-22.04
     permissions:
@@ -276,6 +368,7 @@ jobs:
       - license
       - pr
       - platform-xtest
+      - associated-issue
     runs-on: ubuntu-latest
     if: always()
     steps:
