--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -241,7 +241,7 @@ jobs:
           sudo apt-get install -y ca-certificates
           sudo cp ./keys/localhost.crt /usr/local/share/ca-certificates
           sudo update-ca-certificates
-      - run: docker compose up -d --wait --wait-timeout 240
+      - run: docker compose up -d --wait --wait-timeout 240 || docker compose logs
       - run: go run ./service provision keycloak
       - run: go run ./service provision fixtures
       - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
