--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -238,6 +238,7 @@ jobs:
           cp opentdf-dev.yaml opentdf.yaml
       - name: Added Trusted Certs
         run: |
+          sudo chmod -R 777 ./keys
           sudo apt-get install -y ca-certificates
           sudo cp ./keys/localhost.crt /usr/local/share/ca-certificates
           sudo update-ca-certificates
