--- a/service/buf.yaml
+++ b/service/buf.yaml
@@ -9,7 +9,7 @@ breaking:
     - PACKAGE
     - WIRE_JSON
     - WIRE
-  # ignore: # [https://buf.build/docs/configuration/v1/buf-yaml#default-values]
+  # ignore: # Docs: https://buf.build/docs/configuration/v1/buf-yaml#default-values
 lint:
   allow_comment_ignores: true
   use:
