--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -14,7 +14,7 @@ jobs:
       - title-validation
       - associated-issue
     runs-on: ubuntu-22.04
-    if: always()
+    if: ${{ !cancelled() }}
     steps:
       - if: contains(needs.*.result, 'failure')
         run: echo "Failed due to ${{ contains(needs.*.result, 'failure') }}" && exit 1
