--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -65,9 +65,9 @@ jobs:
             examples
 
   associated-issue:
-    if: contains(fromJSON('["pull_request", "pull_request_target"]'), github.event_name)
     name: Issue Accociated with Pull Request
     if: |
+      contains(fromJSON('["pull_request", "pull_request_target"]'), github.event_name) &&
       !contains(fromJSON('["dependabot[bot]", "opentdf-automation[bot]"]'), github.actor)
     runs-on: ubuntu-22.04
     permissions:
