--- a/service/cmd/keycloak_data.yaml
+++ b/service/cmd/keycloak_data.yaml
@@ -71,6 +71,16 @@ realms:
           secret: secret
           protocolMappers:
             - *customAudMapper
+      - client:
+          clientID: opentdf-public
+          enabled: true
+          name: opentdf-public
+          serviceAccountsEnabled: false
+          publicClient: true
+          redirectUris:
+            - 'http://localhost:9000/*'
+          protocolMappers:
+            - *customAudMapper
     users:
       - username: sample-user
         enabled: true
