set public_client_id from config to idp well-known configuration and update configs

--- a/opentdf-example-no-kas.yaml
+++ b/opentdf-example-no-kas.yaml
@@ -13,6 +13,7 @@ server:
   auth:
     enabled: false
     enforceDPoP: false
+    publicclientid: "opentdf-public"
     audience: "http://localhost:8080"
     issuer: http://localhost:8888/auth/realms/tdf
   cors:
