--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -27,6 +27,7 @@ server:
   auth:
     enabled: true
     enforceDPoP: false
+    publicclientid: "opentdf-public"
     audience: "http://localhost:8080"
     issuer: http://keycloak:8888/auth/realms/opentdf
     policy:
