--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -35,6 +35,7 @@ server:
   auth:
     enabled: true
     enforceDPoP: false
+    publicclientid: "opentdf-public"
     audience: 'http://localhost:8080'
     issuer: http://localhost:8888/auth/realms/opentdf
     policy:
