--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -170,6 +170,8 @@ jobs:
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
       - uses: bufbuild/buf-setup-action@aceb106d2419c4cff48863df90161d92decb8591
+        with:
+          github_token: ${{ github.token }}
       - uses: bufbuild/buf-lint-action@06f9dd823d873146471cfaaf108a993fe00e5325
         with:
           input: service
