--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,4 +1,4 @@
-name: "Checks"
+name: 'Checks'
 
 env:
   IS_RELEASE_BRANCH: ${{ startsWith(github.head_ref, 'release-please-') }}
@@ -40,7 +40,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.5"
+          go-version: '1.22.5'
           check-latest: false
           cache-dependency-path: |
             examples/go.sum
@@ -50,7 +50,7 @@ jobs:
       - if: env.IS_RELEASE_BRANCH == 'true'
         name: prevent depending on unreleased upstream changes
         run: ./.github/scripts/work-init.sh
-      - if:  github.head_ref == format('release-please--branches--main--components--{0}', matrix.directory)
+      - if: github.head_ref == format('release-please--branches--main--components--{0}', matrix.directory)
         name: prevent tagging with replace directives
         run: go mod edit --json | jq -e '.Replace | not'
         working-directory: ${{ matrix.directory }}
@@ -93,7 +93,7 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.5"
+          go-version: '1.22.5'
           check-latest: false
           cache-dependency-path: |
             service/go.sum
@@ -158,7 +158,6 @@ jobs:
           push: false
 
   platform-xtest:
-    needs: integration
     uses: opentdf/tests/.github/workflows/xtest.yml@main
     with:
       # use commit instead of ref so we can "go get" specific sdk version
@@ -178,10 +177,10 @@ jobs:
       - uses: bufbuild/buf-breaking-action@c57b3d842a5c3f3b454756ef65305a50a587c5ba
         with:
           input: service
-          against: "https://github.com/opentdf/platform.git#branch=main,subdir=service"
+          against: 'https://github.com/opentdf/platform.git#branch=main,subdir=service'
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.5"
+          go-version: '1.22.5'
           check-latest: false
           cache-dependency-path: |
             service/go.sum
@@ -224,7 +223,7 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
       - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7
         with:
-          go-version: "1.22.5"
+          go-version: '1.22.5'
           check-latest: false
           cache: false
       - name: install go-licenses
