--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -39,6 +39,7 @@ jobs:
           - lib/fixtures
           - lib/flattening
           - lib/identifier
+          - tests-bdd
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.4.2
         with:
@@ -53,6 +54,7 @@ jobs:
             protocol/go/go.sum
             sdk/go.sum
             service/go.sum
+            tests-bdd/go.sum
       - if: env.IS_RELEASE_BRANCH == 'true'
         name: prevent depending on unreleased upstream changes
         run: ./.github/scripts/work-init.sh
@@ -67,11 +69,55 @@ jobs:
       - run: go work use .
         if: env.IS_RELEASE_BRANCH == 'true'
         working-directory: ${{ matrix.directory }}
-      - name: govluncheck
+      - name: govulncheck
+        if: matrix.directory != 'tests-bdd'
         uses: golang/govulncheck-action@b625fbe08f3bccbe446d94fbf87fcc875a4f50ee # v1.0.4
         with:
           go-version-input: "1.24.6"
           work-dir: ${{ matrix.directory }}
+      - name: govulncheck (tests-bdd with filtering)
+        if: matrix.directory == 'tests-bdd'
+        run: |
+          # Install govulncheck
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          
+          # Run govulncheck and capture output
+          set +e  # Don't exit on error initially
+          OUTPUT=$(govulncheck -C ${{ matrix.directory }} -format text ./... 2>&1)
+          EXIT_CODE=$?
+          
+          # Filter out known vulnerabilities
+          FILTERED_OUTPUT=$(echo "$OUTPUT" | awk '
+          /Vulnerability #.*: GO-2025-3829/ { skip=1; next }
+          /^Vulnerability #/ && skip { skip=0 }
+          /^Your code is affected by/ && skip { skip=0 }
+          /^This scan found no other/ && skip { skip=0 }
+          /^Use.*verbose/ && skip { skip=0 }
+          !skip { print }
+          ')
+          
+          # Count remaining vulnerabilities and update summary if needed
+          VULN_COUNT=$(echo "$FILTERED_OUTPUT" | grep -c "^Vulnerability #")
+          if [ "$VULN_COUNT" -gt 0 ]; then
+            # Update the summary to show accurate count
+            SUMMARY_LINE="Your code is affected by $VULN_COUNT unfiltered vulnerabilities (filtered 1 known exception)."
+            FILTERED_OUTPUT=$(echo "$FILTERED_OUTPUT" | sed -E "s/Your code is affected by [0-9]+ vulnerabilities from [0-9]+ modules\./$SUMMARY_LINE/")
+          fi
+          
+          # Check if there are any remaining vulnerabilities after filtering
+          if echo "$FILTERED_OUTPUT" | grep -q "Vulnerability #"; then
+            echo "❌ Found unfiltered vulnerabilities:"
+            echo "$FILTERED_OUTPUT"
+            exit 1
+          else
+            echo "✅ No unfiltered vulnerabilities found"
+            if [ $EXIT_CODE -ne 0 ]; then
+              echo "ℹ️  Temporarily ignoring known vulnerabilities in tests-bdd:"
+              echo "   - GO-2025-3829 (Docker firewalld): No fix available"
+              echo "   - Check for updates: https://pkg.go.dev/vuln/GO-2025-3829"
+            fi
+            exit 0
+          fi
       - name: golangci-lint
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
         with:
@@ -393,6 +439,64 @@ jobs:
       focus-sdk: go
       # use commit instead of ref so we can "go get" specific sdk version
       platform-ref: ${{ github.event.pull_request.head.sha || github.sha }} lts
+  
+  tests-bdd:
+    name: Cucumber BDD Tests
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          # Remove containerd if present to prevent conflict
+          sudo apt-get remove -y containerd containerd.io || true
+          sudo apt-get install -y curl docker.io docker-compose-v2 lsof coreutils libnss3-tools
+          curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64"
+          chmod +x mkcert-v*-linux-amd64
+          sudo cp mkcert-v*-linux-amd64 /usr/local/bin/mkcert
+
+      - name: "Checkout"
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.4.2
+        with:
+          persist-credentials: false
+      - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+        with:
+          go-version-file: ./tests-bdd/go.mod
+          cache: false
+      
+      - name: Build local platform-cukes image for testing
+        run: docker build -t platform-cukes .
+
+      - name: Run BDD Tests
+        run: |
+          CUKES_LOG_HANDLER=console go test ./tests-bdd -v --tags=cukes --godog.random --godog.format="cucumber:$(pwd)/cukes_platform_report.json,pretty:$(pwd)/cukes_platform_report.log,pretty" ./features
+      
+      - name: Check for undefined steps
+        run: |
+          if grep -qi "Undefined" cukes_platform_report.log; then
+            echo "❌ Undefined steps found in BDD tests!"
+            exit 1
+          fi
+      
+      - name: Get logs on failure
+        if: failure() || cancelled()
+        run: |
+          echo "********** Cukes Platform Compose log **********"
+          cat cukes_platform_compose.log
+          echo "********** Docker logs **********"
+          docker ps -aq | xargs -L 1 docker logs
+      - uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b # v4.3.4
+        if: ${{ !cancelled() }}
+        with:
+          name: cukes-report
+          path: |
+            cukes_platform_report.json
+            cukes_platform_report.log
+          retention-days: 1
 
   # test latest otdfctl CLI 'main' against platform PR branch
   otdfctl-test:
@@ -467,6 +571,7 @@ jobs:
       - benchmark
       - license
       - platform-xtest
+      - tests-bdd
       - otdfctl-test
     runs-on: ubuntu-22.04
     if: ${{ !cancelled() }}
