--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -213,6 +213,7 @@ jobs:
           mkcert -cert-file ./keys/platform.crt -key-file ./keys/platform-key.pem localhost
           yq eval '.server.tls.enabled = true' -i opentdf.yaml
           yq eval '.trace = {"enabled":true}' -i opentdf.yaml
+          yq eval '.services.kas.preview.ec_tdf_enabled = true' -i opentdf.yaml
       - name: Added Trusted Certs
         run: |
           sudo chmod -R 777 ./keys
