--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -79,7 +79,12 @@ jobs:
           skip-cache: true
       - if: matrix.directory == 'service'
         run: .github/scripts/init-temp-keys.sh
-      - run: go test ./... -short
+      - if: matrix.directory == 'examples'
+        # Since 'trs' is an integration test, we skip it
+        run: go test $(go list ./... | grep -v '/examples/trs') -short
+        working-directory: ${{ matrix.directory }}
+      - if: matrix.directory != 'examples'
+        run: go test ./... -short
         working-directory: ${{ matrix.directory }}
       - if: matrix.directory == 'service'
         run: go test ./service/integration -race -failfast
