chore(ci): Adds sqlc/mermerd up-to-date checks

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -407,10 +407,10 @@ jobs:
         with:
           otdfctl-ref: "main"
 
-  buflint:
+  buflint-and-gencode-checks:
     permissions:
       contents: read
-    name: Protocol Buffer Lint and Gencode Up-to-date check
+    name: Protocol Buffer Lint and All Gencode Up-to-date check
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.4.2
@@ -442,6 +442,12 @@ jobs:
       - run: make proto-generate
       - name: generate connect wrappers
         run: make connect-wrapper-generate
+
+      # Gencode for Database (SQLc) and ERD documentation
+      - run: cd service && go install github.com/KarnerTh/mermerd@v0.12.0
+      - run: cd service && go install github.com/sqlc-dev/sqlc/cmd/sqlc@v1.29.0
+      - run: make policy-erd-gen policy-sql-gen
+
       # Ensure all generated files are staged before checking for diffs
       - run: git add docs/openapi/* docs/grpc/* || true
       - name: Restore go.mod after installing protoc-gen-doc
