set proper ers mode in yaml

--- a/opentdf-saas-okta.yaml
+++ b/opentdf-saas-okta.yaml
@@ -36,7 +36,16 @@ services:
         legacy: true
   entityresolution:
     log_level: info
-    mode: claims
+    mode: virtrusaas
+    # url: http://localhost:8888/auth
+    # clientid: "tdf-entity-resolution"
+    # clientsecret: "secret"
+    # realm: "opentdf"
+    # legacykeycloak: true
+    # inferid:
+    #   from:
+    #     email: true
+    #     username: true
   # policy is enabled by default in mode 'all'
   # policy:
   #   enabled: true
