--- a/service/internal/fixtures/policy_fixtures.yaml
+++ b/service/internal/fixtures/policy_fixtures.yaml
@@ -489,7 +489,7 @@ kas_registry:
   data:
     key_access_server_1:
       id: 34f2acdc-3d9c-4e92-80b6-90fe4dc9afcb
-      uri: https://kas.example.com
+      uri: http://localhost:8080
       public_key:
         remote: https://kas.example.com/public_key
       name: kas-remote-example
