--- a/opentdf-kas-mode.yaml
+++ b/opentdf-kas-mode.yaml
@@ -15,7 +15,9 @@ services:
   kas:
     preview:
       ec_tdf_enabled: false
-      key_management: false
+      key_management:
+        enabled: false
+        registered_kas_uri: http://localhost:8080 # Should match what you have registered for *this* KAS in the policy db.
     # root_key: # create key `openssl rand 32 -hex`
     keyring:
       - kid: e1
@@ -29,7 +31,6 @@ services:
         alg: rsa:2048
         legacy: true
 server:
-  public_hostname: localhost
   tls:
     enabled: false
     cert: ./keys/platform.crt
