--- a/opentdf-kas-mode.yaml
+++ b/opentdf-kas-mode.yaml
@@ -13,11 +13,10 @@ logger:
   output: stdout
 services:
   kas:
+    registered_kas_uri: http://localhost:8080 # Should match what you have registered for *this* KAS in the policy db.
     preview:
       ec_tdf_enabled: false
-      key_management:
-        enabled: false
-        registered_kas_uri: http://localhost:8080 # Should match what you have registered for *this* KAS in the policy db.
+      key_management: false
     # root_key: # create key `openssl rand 32 -hex`
     keyring:
       - kid: e1
@@ -31,6 +30,7 @@ services:
         alg: rsa:2048
         legacy: true
 server:
+  public_hostname: localhost
   tls:
     enabled: false
     cert: ./keys/platform.crt
