--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -60,6 +60,7 @@ jobs:
             docs
             sdk
             policy
+            ers
             kas
             authz
             examples
