--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
         with:
-          version: v2.1
+          version: latest
           working-directory: ${{ matrix.directory }}
           skip-cache: true
       - if: matrix.directory == 'service'
@@ -500,7 +500,7 @@ jobs:
       - run: cd service && go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: cd service && go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: cd service && go install github.com/sudorandom/protoc-gen-connect-openapi@v0.18.0
-      - run: cd service && go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.1
+      - run: cd service && go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - run: make proto-generate
       - name: generate connect wrappers
         run: make connect-wrapper-generate
