--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -78,9 +78,9 @@ jobs:
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
         with:
           version: latest
+          verify: false # don't download schema
           working-directory: ${{ matrix.directory }}
           skip-cache: true
-          args: --skip-config-verify
       - if: matrix.directory == 'service'
         run: .github/scripts/init-temp-keys.sh
       - run: go test ./... -short
