--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -501,7 +501,7 @@ jobs:
       - run: cd service && go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: cd service && go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: cd service && go install github.com/sudorandom/protoc-gen-connect-openapi@v0.18.0
-      - run: cd service && go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - run: cd service && go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.1
       - run: make proto-generate
       - name: generate connect wrappers
         run: make connect-wrapper-generate
