--- a/service/internal/fixtures/policy_fixtures.yaml
+++ b/service/internal/fixtures/policy_fixtures.yaml
@@ -576,15 +576,18 @@ provider_configs:
     columns:
       - id
       - provider_name
+      - manager
       - config
   data:
     provider_config_1:
       id: 4ab6b1c4-fa5c-4036-8921-53f8c267b728
-      provider_name: aws
+      provider_name: fixture-aws
+      manager: opentdf.io/basic
       config: eyJzb21lIjogInZhbHVlIn0g
     provider_config_2:
       id: 19098106-54a1-4d33-8846-4894b5b6db3e
-      provider_name: gcp
+      provider_name: fixture-gcp
+      manager: opentdf.io/basic
       config: eyJzb21lIjogInZhbHVlIn0g
 
 ##
