--- a/.github/workflows/dependency-review.yaml
+++ b/.github/workflows/dependency-review.yaml
@@ -87,6 +87,8 @@ jobs:
             LGPL-3.0-or-later,
             LGPLLR,
             NGPL
+          allow-dependencies-licenses: >
+            pkg:githubactions/SonarSource/sonarqube-scan-action
           comment-summary-in-pr: on-failure
           base-ref: ${{ inputs.base-ref || github.event.pull_request.base.sha || github.event.repository.default_branch }}
           head-ref: ${{ inputs.head-ref || github.event.pull_request.head.sha || github.ref }}
