--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -51,10 +51,11 @@ services:
   #   enabled: true
   #   list_request_limit_default: 1000
   #   list_request_limit_max: 2500
-  # authorization:
-  #   entitlement_policy_cache:
-  #     enabled: false
-  #     refresh_interval: 30s
+  authorization:
+    plugin_pdps:
+      - name: 'granular-plugin-pdp'
+        resource_fqn_prefixes:
+          - 'https://reg_res/granular'
 server:
   public_hostname: localhost
   tls:
