--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -461,10 +461,14 @@ jobs:
     name: otdfctl e2e tests
     runs-on: ubuntu-latest
     steps:
+      - name: Install GNU parallel
+        run: |
+          sudo apt update
+          sudo apt install -y parallel
       - uses: opentdf/platform/test/start-up-with-containers@main
         with:
           platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - uses: opentdf/otdfctl/e2e@main
+      - uses: opentdf/otdfctl/e2e@chore/ci-parallel
         with:
           otdfctl-ref: "main"
 
